--- a/workshops.html
+++ b/workshops.html
@@ -80,70 +80,45 @@
 </div>
 
 <main class="main">
-  <section id="hero-workshops" class="hero-banner" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('rss/AnnReflectionBannerforLetter_clear.png');">
-    <div class="hero-content">
-      <h1>Art Jams & Studio Services</h1>
-      <p>Inclusive installations and participatory workshops built on the A/I/R (Access, Inclusion, Resilience) framework.</p>
+<section id="hero-workshops" class="hero-banner workshop-hero-bg">
+  <div class="hero-content">
+    <h1>Art Jams & Studio Services</h1>
+    <p>Inclusive installations and participatory workshops built on the A/I/R (Access, Inclusion, Resilience) framework.</p>
+  </div>
+</section>
+
+<section id="featured-event">
+  <div class="project-banner-note">
+    <span class="status-badge-live">✨ LIVE EVENT</span>
+    <h2>Teapot Lanterns: Brewing Light & Connection</h2>
+    <p>A community workshop inspired by tea culture and the adaptive plasticity of reclaimed materials.</p>
+    
+    <div class="event-details-bar">
+      <span>📅 Friday, Feb 13, 2026</span>
+      <span>📍 NeighbourSpace</span>
+      <span>👥 Capacity: Max 24 people</span>
     </div>
-  </section>
 
-  <section id="featured-event">
-    <div class="project-banner-note">
-      <span class="status-badge" style="background: #C66A53; color: white; padding: 5px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: 700;">✨ LIVE EVENT</span>
-      <h2>Teapot Lanterns: Brewing Light & Connection</h2>
-      <p>A community workshop inspired by tea culture and the adaptive plasticity of reclaimed materials.</p>
-      
-      <div class="event-details" style="display: flex; flex-wrap: wrap; gap: 1.5rem; margin: 1rem 0; font-weight: bold;">
-        <span>📅 Friday, Feb 13, 2026</span>
-        <span>📍 NeighbourSpace</span>
-        <span>👥 Capacity: Max 24 people</span>
-      </div>
-
-      <div class="registration-box">
-        <p><strong>Registration Required:</strong> Spaces limited to maintain a sensory-friendly environment.</p>
-        <a href="#" class="cta glow">Register for Teapot Jam (Placeholder) →</a>
-      </div>
+    <div class="registration-box">
+      <p><strong>Registration Required:</strong> Spaces limited to maintain a sensory-friendly environment.</p>
+      <a href="#" class="cta glow">Register for Teapot Jam (Placeholder) →</a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="dev-access" class="substack-box" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-    <div>
-      <h3>🧪 In Development: Tactile Series</h3>
-      <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
-      <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
-    </div>
-    <div>
-      <h3>🖍️ Access Commitment</h3>
-      <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments and tactile materials.</p>
-    </div>
-  </section>
+<section id="dev-access" class="substack-box dev-access-grid">
+  <div>
+    <h3>🧪 In Development: Tactile Series</h3>
+    <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
+    <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
+  </div>
+  <div>
+    <h3>🖍️ Access Commitment</h3>
+    <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments and tactile materials.</p>
+  </div>
+</section>
 
-  <section id="studio-services">
-    <h2>Studio Services & Commissions</h2>
-    <div class="project-grid">
-      <div class="project project-card">
-        <div class="gallery-item-slider">
-          <div class="slider-wrapper">
-            <img src="rss/AC6_Teapot_lantern_depressed_from_tall_cup.png" alt="Teapot lantern display">
-            <img src="rss/WaterRabbitTrop_storytelling.jpg" alt="Large scale bird lantern installation">
-          </div>
-        </div>
-        <h3>Lantern Installations (Big & Small)</h3>
-        <p>Custom lanterns for storefront windows or festivals using authentic Chinese techniques and the <strong>Cast Method</strong>.</p>
-      </div>
-
-      <div class="project project-card">
-        <div class="gallery-item">
-          <img src="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" alt="Painting fabric art" class="catalog-thumb" style="width:100%; height:280px; object-fit:cover;">
-        </div>
-        <h3>Textile Banners & Curtains</h3>
-        <p>Vivid large-scale banners painted with acrylic-based fabric paints. Custom designs celebrate community identity and can serve as functional curtains or partitions.</p>
-      </div>
-    </div>
-  </section>
-
-<section id="technical-foundations" class="project-grid">
-
+<section id="technical-foundations">
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
       <img src="rss-wor/5-kind-of-joints.png" alt="5 Essential Joints for Lantern Construction">
@@ -168,32 +143,25 @@
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
-      <img src="rss-wor/shadow-light-physics.png" alt="Dynamic Shadow Animation through Light Source Manipulation">
+      <img src="rss-wor/shadow-light-physics.png" alt="Shadow Animation Light Source Manipulation">
     </div>
     <div class="card-text">
       <h3>III. Optical Physics</h3>
       <p><strong>Kinetic Shadow Animation:</strong> Manipulating the focal point and distance of the light source rather than the puppet.</p>
-      <p>By changing the light's angle and proximity, the shadow undergoes "optical scaling" and transformation, creating a cinematic sense of movement and depth.</p>
+      <p>By changing the light's angle and proximity, the shadow undergoes optical transformation, creating a cinematic sense of movement.</p>
     </div>
   </div>
 
   <div class="project project-card technical-card">
-  <div class="gallery-item-slider">
-    <div class="slider-wrapper">
+    <div class="gallery-item-slider">
       <img src="rss-wor/casting-process-bird.png" alt="Form-based lantern casting technique">
     </div>
+    <div class="card-text">
+      <h3>IV. Form-Based Shell Casting</h3>
+      <p><strong>Complex Volume Construction:</strong> A precise casting method using real-life objects as a master mold.</p>
+      <p>Uses a protective interface (plastic wrap) and surgical mending to create rigid, lightweight paper shells.</p>
+    </div>
   </div>
-  <div class="card-text">
-    <h3>IV. Form-Based Shell Casting</h3>
-    <p><strong>Complex Volume Construction:</strong> A precise casting method using real-life objects or custom-sculpted forms as a "master mold."</p>
-    <ul>
-      <li><strong>Protective Interface:</strong> A primary plastic wrap layer ensures object protection and friction-less removal.</li>
-      <li><strong>Structural Skin:</strong> Application of high-strength rice paper or triple-layered tissue to create a lightweight, rigid shell.</li>
-      <li><strong>Surgical Mending:</strong> Controlled incision to extract the internal form, followed by structural re-sealing to maintain the object's integrity.</li>
-    </ul>
-  </div>
-</div>
-
 </section>
 
   <section id="funder-info" class="substack-box">
