--- a/workshops.html
+++ b/workshops.html
@@ -109,6 +109,7 @@
 <section id="dev-access" class="substack-box dev-access-grid">
   <div>
     <h3>🧪 In Development: Tactile Series</h3>
+     <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Cloth teapot lantern - with Owl">
     <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
     <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
   </div>
