--- a/workshops.html
+++ b/workshops.html
@@ -133,7 +133,7 @@
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
-      <img src="rss-wor/sumi-e-ink-loading.png" alt="3-Level Ink Dilution Technique">
+      <img src="rss-wor/sumi-e-promo.png" alt="3-Level Ink Dilution Technique">
     </div>
     <div class="card-text">
       <h3>II. Material Science</h3>
@@ -144,7 +144,7 @@
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
-      <img src="rss-wor/shadow-light-physics.png" alt="Shadow Animation Light Source Manipulation">
+      <img src="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" alt="Shadow Animation Light Source Manipulation">
     </div>
     <div class="card-text">
       <h3>III. Optical Physics</h3>
@@ -155,7 +155,7 @@
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
-      <img src="rss-wor/casting-process-bird.png" alt="Form-based lantern casting technique">
+      <img src="rss-wor/ann-with-lantern-bird-removeCasting.jpg" alt="Form-based lantern casting technique">
     </div>
     <div class="card-text">
       <h3>IV. Form-Based Shell Casting</h3>
