--- a/workshops.html
+++ b/workshops.html
@@ -106,19 +106,28 @@
   </div>
 </section>
 
-<section id="dev-access" class="substack-box dev-access-grid">
-  <div>
-    <h3>🧪 In Development: Tactile Series</h3>
-     <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Cloth teapot lantern - with Owl">
-    <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
-    <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
+<section id="dev-access" class="project-grid dev-access-grid">
+  <div class="project project-card">
+    <div class="gallery-item-slider">
+      <div class="slider-wrapper">
+        <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Cloth teapot lantern with Owl embroidery">
+      </div>
+    </div>
+    <div class="card-text">
+      <h3>🧪 In Development: Tactile Series</h3>
+      <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
+      <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
+    </div>
   </div>
-  <div>
-    <h3>🖍️ Access Commitment</h3>
-    <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments and tactile materials.</p>
+
+  <div class="project project-card">
+    <div class="card-text">
+      <h3>🖍️ Access Commitment</h3>
+      <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments and tactile materials.</p>
+      <p><em>As a d/Deaf and neurodiverse artist, I provide venue assessments for technology support.</em></p>
+    </div>
   </div>
 </section>
-
 <section id="technical-foundations">
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
