--- a/workshops.html
+++ b/workshops.html
@@ -106,15 +106,13 @@
   </div>
 </section>
 
-<section id="dev-access" class="project-grid dev-access-grid">
-  <div class="project project-card">
+<section id="dev-access" class="project-grid">
+  <div class="project project-card featured-card">
     <div class="gallery-item-slider">
-      <div class="slider-wrapper">
-        <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Cloth teapot lantern with Owl embroidery">
-      </div>
+      <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Embroidery Fabric Teapot Prototype">
     </div>
     <div class="card-text">
-      <h3>🧪 In Development: Tactile Series</h3>
+      <h3>🧪 Featured: Tactile Series</h3>
       <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
       <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
     </div>
@@ -124,10 +122,11 @@
     <div class="card-text">
       <h3>🖍️ Access Commitment</h3>
       <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments and tactile materials.</p>
-      <p><em>As a d/Deaf and neurodiverse artist, I provide venue assessments for technology support.</em></p>
+      <p><em>As a d/Deaf artist, I provide venue assessments for technology support.</em></p>
     </div>
   </div>
 </section>
+  
 <section id="technical-foundations">
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
