--- a/workshops.html
+++ b/workshops.html
@@ -88,7 +88,7 @@
 </section>
 
 <section id="featured-event">
-  <div class="project-banner-note">
+  <div class="project-banner-note featured-card">
     <span class="status-badge-live">✨ LIVE EVENT</span>
     <h2>Teapot Lanterns: Brewing Light & Connection</h2>
     <p>A community workshop inspired by tea culture and the adaptive plasticity of reclaimed materials.</p>
@@ -101,7 +101,7 @@
 
     <div class="registration-box">
       <p><strong>Registration Required:</strong> Spaces limited to maintain a sensory-friendly environment.</p>
-      <a href="#" class="cta glow">Register for Teapot Jam (Placeholder) →</a>
+      <a href="#" class="cta glow">Register for Teapot Jam →</a>
     </div>
   </div>
 </section>
