--- a/workshops.html
+++ b/workshops.html
@@ -109,7 +109,9 @@
 <section id="dev-access" class="project-grid">
   <div class="project project-card featured-card">
     <div class="gallery-item-slider">
-      <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Embroidery Fabric Teapot Prototype">
+      <div class="slider-wrapper">
+        <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Embroidery Fabric Teapot Prototype">
+      </div>
     </div>
     <div class="card-text">
       <h3>🧪 Featured: Tactile Series</h3>
