--- a/workshops.html
+++ b/workshops.html
@@ -105,17 +105,22 @@
     </div>
   </div>
 </section>
-
+  
+  
 <section id="dev-access" class="project-grid">
   <div class="project project-card featured-card">
     <div class="gallery-item-slider">
       <div class="slider-wrapper">
+       <a href="rss-wor/cloth_teapot_lantern_owl.jpg" class="lightbox-trigger" title="Explore the Installation Up Close">
         <img src="rss-wor/cloth_teapot_lantern_owl.jpg" alt="Embroidery Fabric Teapot Prototype">
+        <span class="zoom-icon">🔍</span>
+      </a>
       </div>
     </div>
     <div class="card-text">
       <h3>🧪 Featured: Tactile Series</h3>
       <p>Prototyping <strong>Embroidery Fabric Teapots</strong>—fine-stitch embroidery on translucent fabrics for high tactile detail.</p>
+      <a href="rss-wor/cloth_teapot_lantern_owl.jpg" class="button-ghost">Explore Up Close</a>
       <a href="mailto:annreflection@gmail.com" class="button-ghost">Request to Beta Test</a>
     </div>
   </div>
