--- a/workshops.html
+++ b/workshops.html
@@ -133,18 +133,23 @@
     </div>
   </div>
 </section>
-  
+
+
 <section id="technical-foundations">
-  <div class="project project-card technical-card">
-    <div class="gallery-item-slider">
-      <img src="rss-wor/5-kind-of-joints.png" alt="5 Essential Joints for Lantern Construction">
+  <h2>Technical Foundations</h2> <div class="technical-grid"> <div class="project project-card technical-card">
+      <div class="gallery-item-slider">
+         <a href="rss-wor/5-kind-of-joints.png" class="lightbox-trigger" title="Explore the 5 Essential Joints">
+            <img src="rss-wor/5-kind-of-joints.png" alt="5 Essential Joints for Lantern Construction">
+            <span class="zoom-icon">🔍</span>
+         </a>
+      </div>
+      <div class="card-text">
+        <h3>I. Structural Engineering</h3>
+        <p><strong>The 5 Essential Joints:</strong> Mastery of bamboo and branch joinery (Flat, Cross, Hook, T, and Corner).</p>
+        <p>Focuses on tension, structural integrity, and the physics of bamboo slats and upcycled organic materials.</p>
+      </div>
     </div>
-    <div class="card-text">
-      <h3>I. Structural Engineering</h3>
-      <p><strong>The 5 Essential Joints:</strong> Mastery of bamboo and branch joinery (Flat, Cross, Hook, T, and Corner).</p>
-      <p>Focuses on tension, structural integrity, and the physics of upcycled organic materials.</p>
-    </div>
-  </div>
+
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
