--- a/workshops.html
+++ b/workshops.html
@@ -136,7 +136,9 @@
 
 
 <section id="technical-foundations">
-  <h2>Technical Foundations</h2> <div class="technical-grid"> <div class="project project-card technical-card">
+  <h2>Technical Foundations</h2> 
+  <div class="technical-grid">
+    <div class="project project-card technical-card">
       <div class="gallery-item-slider">
          <a href="rss-wor/5-kind-of-joints.png" class="lightbox-trigger" title="Explore the 5 Essential Joints">
             <img src="rss-wor/5-kind-of-joints.png" alt="5 Essential Joints for Lantern Construction">
@@ -146,15 +148,18 @@
       <div class="card-text">
         <h3>I. Structural Engineering</h3>
         <p><strong>The 5 Essential Joints:</strong> Mastery of bamboo and branch joinery (Flat, Cross, Hook, T, and Corner).</p>
-        <p>Focuses on tension, structural integrity, and the physics of bamboo slats and upcycled organic materials.</p>
+        <p>Focuses on tension, structural integrity, and the physics of bamboo slats and upcycled organic materials to achieve shape without breaking</p>
       </div>
     </div>
 
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
-      <img src="rss-wor/sumi-e-promo.png" alt="3-Level Ink Dilution Technique">
-    </div>
+         <a href="rss-wor/sumi-e-promo.png" class="lightbox-trigger" title="Explore Ink Loading Techniques">
+            <img src="rss-wor/sumi-e-promo.png" alt="3-Level Ink Dilution Technique">
+            <span class="zoom-icon">🔍</span>
+         </a>
+      </div>
     <div class="card-text">
       <h3>II. Material Science</h3>
       <p><strong>3-Level Ink Loading:</strong> Traditional Sumi-e technique using controlled dilution levels (Light, Medium, Dark).</p>
@@ -164,8 +169,11 @@
 
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
-      <img src="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" alt="Shadow Animation Light Source Manipulation">
-    </div>
+         <a href="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" class="lightbox-trigger" title="Explore Kinetic Shadow Animation">
+            <img src="rss-eco/AnnChou_eco7_RabbitMom_inRedShadow.jpg" alt="Shadow Animation Light Source Manipulation">
+            <span class="zoom-icon">🔍</span>
+         </a>
+      </div>
     <div class="card-text">
       <h3>III. Optical Physics</h3>
       <p><strong>Kinetic Shadow Animation:</strong> Manipulating the focal point and distance of the light source rather than the puppet.</p>
