Update workshops.html add lantern

--- a/workshops.html
+++ b/workshops.html
@@ -87,6 +87,8 @@
   </div>
 </section>
 
+
+
 <section id="featured-event">
   <div class="project-banner-note featured-card">
     <span class="status-badge-live">✨ LIVE EVENT</span>
@@ -105,6 +107,7 @@
     </div>
   </div>
 </section>
+  
   
   
 <section id="dev-access" class="project-grid">
@@ -153,6 +156,8 @@
     </div>
 
 
+
+
   <div class="project project-card technical-card">
     <div class="gallery-item-slider">
          <a href="rss-wor/sumi-e-promo.png" class="lightbox-trigger" title="Explore Ink Loading Techniques">
@@ -186,8 +191,8 @@
       <img src="rss-wor/ann-with-lantern-bird-removeCasting.jpg" alt="Form-based lantern casting technique">
     </div>
     <div class="card-text">
-      <h3>IV. Form-Based Shell Casting</h3>
-      <p><strong>Complex Volume Construction:</strong> A precise casting method using real-life objects as a master mold.</p>
+      <h3>IV. Form-Based Shell Casting as whole lantern shaping </h3>
+      <p><strong>Complex Volume Construction:</strong> A precise casting method using real-life objects as a master mold (if not available, form mold with newpaper and bundle inti desired shape).</p>
       <p>Uses a protective interface (plastic wrap) and surgical mending to create rigid, lightweight paper shells.</p>
     </div>
   </div>
@@ -270,6 +275,29 @@
           </ul>
         </div>
       </div>
+
+  <div class="project project-card">
+    <div class="gallery-container">
+      <div class="gallery-item-slider" id="inner-shine-slider">
+        <img src="rss-wor/Lantern Making_ Let Your Inner Shine - c1.png" alt="Participants engaging in lantern making">
+        <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 2.png" alt="Close-up of lantern structure">
+        <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 3.png" alt="Demonstrating the 5-joint technique">
+        <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 4.png" alt="Finished lanterns glowing">           
+      </div>
+    <div class="slider-nav">
+      <button onclick="scrollSlider('inner-shine-slider', -1)" aria-label="Previous image">❮</button>
+      <button onclick="scrollSlider('inner-shine-slider', 1)" aria-label="Next image">❯</button>
+    </div>
+  </div>
+  <div class="card-text">
+    <h3>Lantern Making Art Jam: Let Your Inner Shine</h3>
+    <p><strong>Participants explore personal storytelling through the "Let Your Inner Light Shine" prompt. The session begins with technical training in the 5-joint structural technique, allowing makers to build a form of their choice.</strong></p>
+    
+    <p>We utilize a "Material Mart" featuring donated fabrics, rice paper, grapevines, and bamboo. A meditative ink station is provided to guide the creative process, fostering a sensory environment that encourages resilience and focus.</p>
+    
+    <p><em>Developed for the BC Culture Days A/I/R series, specifically tailored for disability arts and multisensory accessibility.</em></p>
+  </div>
+</div>
 
     </div>
   </section>
