--- a/workshops.html
+++ b/workshops.html
@@ -210,6 +210,20 @@
     </div>
   </section>
 
+  <section id="commissions">
+    <h2>Artistic Commissions</h2>
+    <div class="evidence-grid">
+      <div class="project project-card">
+        <h3>Textile Banners</h3>
+        <p>Large-scale banners painted with acrylic-based fabric paints to celebrate culture and community identity.</p>
+      </div>
+      <div class="project project-card">
+        <h3>Installations (Big &amp; Small)</h3>
+        <p>Custom lanterns for storefront windows or large outdoor festivals using authentic Chinese techniques.</p>
+      </div>
+    </div>
+  </section>
+
   <section id="archive">
     <h2>Visual Archive: History of Art Jams</h2>
     <div class="evidence-grid">
