--- a/workshops.html
+++ b/workshops.html
@@ -292,16 +292,15 @@
 
     <div class="project project-card">
       <div class="gallery-container">
-        <div class="gallery-item-slider" id="inner-shine-slider">
-          <img src="rss-wor/Lantern Making_ Let Your Inner Shine - c1.png" alt="Participants engaging in lantern making">
-          <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 2.png" alt="Close-up of lantern structure">
-          <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 3.png" alt="Demonstrating the 5-joint technique">
-          <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 4.png" alt="Finished lanterns glowing">           
+       <div class="gallery-item-slider" id="inner-shine-slider">
+          <img src="rss-wor/Lantern Making_ Let Your Inner Shine - c1.png" alt="Inner Shine 1">
+          <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 2.png" alt="Inner Shine 2">
+          <img src="rss-wor/Lantern Making_ Let Your Inner Shine -c 3.png" alt="Inner Shine 3">
         </div>
-      <div class="slider-nav">
-        <button onclick="scrollSlider('inner-shine-slider', -1)" aria-label="Previous image">❮</button>
-        <button onclick="scrollSlider('inner-shine-slider', 1)" aria-label="Next image">❯</button>
-      </div>
+        <div class="slider-nav">
+          <button onclick="scrollSlider('inner-shine-slider', -1)">❮</button>
+          <button onclick="scrollSlider('inner-shine-slider', 1)">❯</button>
+        </div>
     </div>
     <div class="card-text">
       <h3>Lantern Making Art Jam: Let Your Inner Shine</h3>
@@ -315,14 +314,14 @@
 
 <div class="project project-card">
   <div class="gallery-container">
-    <div class="gallery-item-slider" id="winter-festival-slider">
-      <img src="rss-wor/drop-in-winter-art-festival-ns1.png" alt="Community engagement at the Winter Arts Festival drop-in">
-      <img src="rss-wor/drop-in-winter-art-festival-ns2.png" alt="Participants creating lanterns at NeighbourSpace">
-    </div>
-    <div class="slider-nav">
-      <button onclick="scrollSlider('winter-festival-slider', -1)" aria-label="Previous image">❮</button>
-      <button onclick="scrollSlider('winter-festival-slider', 1)" aria-label="Next image">❯</button>
-    </div>
+        <div class="gallery-item-slider" id="winter-festival-slider">
+          <img src="rss-wor/drop-in-winter-art-festival-ns1.png" alt="Winter Arts Jam 1">
+          <img src="rss-wor/drop-in-winter-art-festival-ns2.png" alt="Winter Arts Jam 2">
+        </div>
+        <div class="slider-nav">
+          <button onclick="scrollSlider('winter-festival-slider', -1)">❮</button>
+          <button onclick="scrollSlider('winter-festival-slider', 1)">❯</button>
+        </div>
   </div>
   <div class="card-text">
     <h3>Winter Arts Festival: Community Art Jam</h3>
