--- a/workshops.html
+++ b/workshops.html
@@ -210,19 +210,33 @@
     </div>
   </section>
 
-  <section id="commissions">
-    <h2>Artistic Commissions</h2>
-    <div class="evidence-grid">
-      <div class="project project-card">
-        <h3>Textile Banners</h3>
-        <p>Large-scale banners painted with acrylic-based fabric paints to celebrate culture and community identity.</p>
+<section id="commissions">
+  <h2>Studio Services & Commissions</h2>
+  <div class="evidence-grid">
+    
+    <div class="project project-card">
+      <div class="gallery-item">
+         <img src="rss/triple-identity-bio.png" alt="Large-scale painted fabric banner" style="width:100%; height:250px; object-fit:cover; border-radius:8px;">
       </div>
-      <div class="project project-card">
-        <h3>Installations (Big &amp; Small)</h3>
-        <p>Custom lanterns for storefront windows or large outdoor festivals using authentic Chinese techniques.</p>
-      </div>
+      <h3>Hand-Painted Textile Banners</h3>
+      <p>Vivid, large-scale banners painted with acrylic-based fabric paints to celebrate culture and community identity. These custom works are also available for interior decoration, functional curtains, or room partitions.</p>
     </div>
-  </section>
+
+    <div class="project project-card">
+      <div class="gallery-item-slider" id="comm-install-slider">
+        <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="Outdoor festival installation">
+        <img src="rss/AC6_Teapot_lantern_depressed_from_tall_cup.png" alt="Storefront window lantern">
+      </div>
+      <div class="slider-nav">
+        <button onclick="scrollSlider('comm-install-slider', -1)">❮</button>
+        <button onclick="scrollSlider('comm-install-slider', 1)">❯</button>
+      </div>
+      <h3>Installations (Big & Small)</h3>
+      <p>Custom lanterns designed for storefront windows or large-scale outdoor festivals. Each piece integrates authentic Chinese techniques with a sustainable eco-art approach using upcycled and salvaged materials.</p>
+    </div>
+    
+  </div>
+</section>
 
   <section id="archive">
     <h2>Visual Archive: History of Art Jams</h2>
