--- a/workshops.html
+++ b/workshops.html
@@ -216,6 +216,8 @@
     
     <div class="project project-card">
       <div class="gallery-item">
+        
+         <img src="rss/AnnKChou3-Shadow-movement dance with lit banner painted by me.png" alt="Large-scale painted fabric banner" style="width:100%; height:250px; object-fit:cover; border-radius:8px;">
          <img src="rss/triple-identity-bio.png" alt="Large-scale painted fabric banner" style="width:100%; height:250px; object-fit:cover; border-radius:8px;">
       </div>
       <h3>Hand-Painted Textile Banners</h3>
