Update workshops.html metatag

--- a/workshops.html
+++ b/workshops.html
@@ -2,9 +2,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Workshops & Community Arts – Annreflection Studio</title>
-  <meta name="description" content="Accessible art workshops and community-based installations led by Ann K. Chou. Learn lantern making, sumi-e brush painting, sensory storytelling, and more in Victoria & Vancouver." />
-  <meta name="keywords" content="lantern workshop, shadow play, art jam, sumi-e, Chinese brush painting, puppet making, community mural, textile banners, Ann Chou, Annreflection Studio, Victoria artist, Vancouver workshops, disability art, inclusive art" />
+  <title>Art Jams & Studio Services – Annreflection Studio</title>
+  
+  <meta name="description" content="Inclusive art jams and professional studio services by Ann K. Chou. Specializing in lantern installations, sumi-e workshops, and custom textile banners for storefronts and community spaces in Vancouver and 
+    Victoria." />
+  <meta name="keywords" content="Ann K. Chou, annreflection, lantern installations, storefront decoration, inclusive art workshops, sumi-e Victoria, custom textile banners, access design, disability arts BC, upcycled art commissions, community art jams" />
+  <meta name="author" content="Ann K. Chou" />
+
+  <meta property="og:title" content="Art Jams & Studio Services – Annreflection Studio" />
+  <meta property="og:description" content="Participatory workshops and custom eco-art installations built on the A/I/R (Access, Inclusion, Resilience) framework." />
+  <meta property="og:image" content="https://annchou.github.io/rss/AnnReflectionBannerforLetter_clear.png" />
+  <meta property="og:url" content="https://annchou.github.io/workshops.html" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Art Jams & Studio Services – Annreflection Studio" />
+  <meta name="twitter:description" content="Explore lanterns, textile banners, and access-centered workshops connecting art and community." />
+  <meta name="twitter:image" content="https://annchou.github.io/rss/AnnReflectionBannerforLetter_clear.png" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style_wor.css">
 </head>
