Update workshops.html footer

--- a/workshops.html
+++ b/workshops.html
@@ -367,7 +367,11 @@
 
 <footer>
   <div class="flex-container2">
-    <div class="flex-item-left">Art across generations: lanterns, sumi-e, movement & workshops</div>
+    <div class="flex-item-left">
+      Art across generations: lanterns, sumi-e, movement & workshops. 
+      <br>
+      <strong>Visit my <a href="https://beacons.ai/annreflection" style="color: #f6a21d;">Quick Links Hub</a></strong>
+    </div>
     <div class="flex-item-right">© 2020-2026 Ann K. Chou – All rights reserved</div>
   </div>
 </footer>
