--- a/workshops.html
+++ b/workshops.html
@@ -71,6 +71,12 @@
 </header>
 
 <div class="icon-bar" role="navigation" aria-label="Social media and accessibility links">
+  
+  <a href="https://beacons.ai/annreflection" class="beacons" aria-label="Annreflection Hub" title="Annreflection Hub">
+    <i class="fa fa-external-link" aria-hidden="true"></i>
+  </a>
+
+  
   <a href="https://www.instagram.com/annreflection/" class="instagram" aria-label="Follow Ann K. Chou on Instagram">
     <i class="fa fa-instagram" aria-hidden="true"></i>
   </a>
