--- a/Practices.html
+++ b/Practices.html
@@ -54,7 +54,7 @@
       <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Annreflection Studio logo">
     </a>
     <a href="index.html">Home 🏠</a>
-    <a href="Practices.html">Practices 🧬</a>
+    <a href="Practices.html" class="active">Practices 🧬</a>
     <a href="Eco_illum.html">Eco-Illum 🌘</a>
     <a href="workshops.html">Workshops 🎨</a>
 	<a href="https://annreflection.substack.com" target="_blank">Substack 📬</a>
@@ -391,6 +391,7 @@
 
 </body>
 </html>
+
 
 
 
