Update workshops.html subtrack on nav bar

--- a/workshops.html
+++ b/workshops.html
@@ -53,6 +53,7 @@
     <a href="Practices.html">Practices 🧬</a>
     <a href="Eco_illum.html">Eco-Illum 🌘</a>
     <a class="active" href="workshops.html">Workshops 🎨</a>
+    <a href="https://annreflection.substack.com" target="_blank">Substack 📬</a>
      <!-- temp shop -->
       <div class="dropdown">
         <a href="#" class="dropbtn">Shop 👜</a>
