Update Eco_illum.html nav bar, iconbar, footer

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -48,6 +48,7 @@
     <a href="Practices.html">Practices 🧬</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
     <a href="workshops.html">Workshops 🎨</a>
+    <a href="https://annreflection.substack.com" target="_blank">Substack 📬</a>
     <!-- temp shop -->
       <div class="dropdown">
         <a href="#" class="dropbtn">Shop 👜</a>
@@ -77,16 +78,34 @@
 
 
   <!-- ✅ Floating Social Icon Bar -->
- <div class="icon-bar" aria-label="Social media links">
-    <a href="https://www.instagram.com/annreflection/" class="instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook"><i class="fa fa-facebook"></i></a>
-    <a href="https://linkedin.com/in/annkchou" class="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
-    <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
-    <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
-    <!-- ✅ Optional second toggle at the bottom -->
-    <button id="darkModeToggleIconBar"  class="button-ghost"  aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
-  </div>
+<div class="icon-bar" role="navigation" aria-label="Social media and accessibility links">
+  
+  <a href="https://beacons.ai/annreflection" class="beacons" aria-label="Annreflection Hub" title="Annreflection Hub">
+    <i class="fa fa-external-link" aria-hidden="true"></i>
+  </a>
+
+  
+  <a href="https://www.instagram.com/annreflection/" class="instagram" aria-label="Follow Ann K. Chou on Instagram">
+    <i class="fa fa-instagram" aria-hidden="true"></i>
+  </a>
+  <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook" aria-label="Follow Ann K. Chou on Facebook">
+    <i class="fa fa-facebook" aria-hidden="true"></i>
+  </a>
+  <a href="https://linkedin.com/in/annkchou" class="linkedin" aria-label="Connect with Ann K. Chou on LinkedIn">
+    <i class="fa fa-linkedin" aria-hidden="true"></i>
+  </a>
+  <a href="http://www.youtube.com/@annchou9171" class="youtube" aria-label="Subscribe to Ann K. Chou's YouTube channel">
+    <i class="fa fa-youtube" aria-hidden="true"></i>
+  </a>
+  <a href="https://www.flickr.com/photos/annchou/" class="flickr" aria-label="View Ann K. Chou's photography on Flickr">
+    <i class="fa fa-flickr" aria-hidden="true"></i>
+  </a>
+  <a href="https://annreflection.substack.com" class="substack" aria-label="Subscribe to Ann K. Chou's Substack newsletter">
+    <i class="fa fa-stack-exchange" aria-hidden="true"></i>
+  </a>
+
+  <button id="darkModeToggleIconBar" class="button-ghost" aria-label="Switch between dark and light mode" title="Toggle dark mode">🌙</button>
+</div>
 
 
   <main class="main">
@@ -420,12 +439,16 @@
     
 </main>
 
- <footer>
-    <div class="flex-container2">
-      <div class="flex-item-left">Art across generations: lanterns, sumi-e, movement & workshops</div>
-      <div class="flex-item-right">© 2025-2026 Ann K. Chou (annreflection) – All rights reserved</div>
+<footer>
+  <div class="flex-container2">
+    <div class="flex-item-left">
+      Art across generations: lanterns, sumi-e, movement & workshops. 
+      <br>
+      <strong>Visit my <a href="https://beacons.ai/annreflection" style="color: #f6a21d;">Quick Links Hub</a></strong>
     </div>
-  </footer>
+    <div class="flex-item-right">© 2025-2026 Ann K. Chou – All rights reserved</div>
+  </div>
+</footer>
 
   <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   <script>
@@ -609,6 +632,7 @@ function initializeTheme(defaultDark) {
 
 </body>
 </html>
+
 
 
 
